# omne-cli

./: CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_GUIDE.md  ignis-config.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  update-packages.yml
chocolatey/: omne-cli.nuspec
chocolatey/tools/: chocolateyinstall.ps1
homebrew/: omne-cli.rb
scripts/: generate-completions.sh  release.sh  validate-release.sh
snap/: snapcraft.yaml
src/: main.rs
src/commands/: dev.rs  infrastructure.rs  mod.rs  network.rs  ops.rs  validator.rs
src/config/: mod.rs
src/plan/: mod.rs
src/utils/: mod.rs
src/wasm/: mod.rs
templates/: deploy.omne_devnet.toml  deploy.omne_mainnet.toml  deploy.omne_testnet.toml  partner-sample.toml
