[package]
name = "omne-cli"
version = "0.1.4"
edition = "2021"
authors = ["Omne Network <dev@omne.network>"]
description = "Unified command-line orchestration tool for the Omne blockchain ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OmneDAO/omne-cli"
keywords = ["blockchain", "cli", "omne", "cryptocurrency", "validator"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[[bin]]
name = "omne"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls - using rustls instead of OpenSSL for better cross-compilation
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# File operations
walkdir = "2.4"
toml = "0.8"

# Cryptography (for key management) - pure Rust implementations for cross-compilation
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand = "0.8"

# Network utilities
url = "2.4"

# Remove OpenSSL dependency by using pure Rust crypto
# Force compatible base64ct version to avoid edition2024 requirement
[dependencies.base64ct]
version = "=1.6.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
